--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <!-- Footer Start -->
     <footer>
         <footer class="text-white text-center pb-3" style="background-color: #876445;">
-            <p>Copyright &copy;2022 by <a href="https://github.com/dwiprakoso/TA-PBW" class="text-white fw-bold">Dwi Prakoso</a></p>
+            <p>Copyright &copy;2022 by <a href="https://github.com/dwiprakoso/TA-PBW" class="text-white fw-bold" target="blank">Dwi Prakoso</a></p>
         </footer>
     </footer>
     <!-- Footer End -->
